log
Thu 11 May 2023 04:39:13 PM UTC: 
 heap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
3e582fe
Thu 11 May 2023 04:41:32 PM UTC: 
 heap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:3: error: unknown type name ‘heap’; did you mean ‘Heap’?
   39 |   heap *new;
      |   ^~~~
      |   Heap
heap.c:41:6: error: request for member ‘heapArray’ in something not a structure or union
   41 |   new->heapArray = malloc(3 * sizeof(Heap));
      |      ^~
heap.c:42:6: error: request for member ‘size’ in something not a structure or union
   42 |   new->size = 0;
      |      ^~
heap.c:43:6: error: request for member ‘capac’ in something not a structure or union
   43 |   new->capac = 3;
      |      ^~
heap.c:45:10: error: returning ‘int *’ from a function with incompatible return type ‘Heap *’ {aka ‘struct Heap *’} [-Werror=incompatible-pointer-types]
   45 |   return new;
      |          ^~~
cc1: all warnings being treated as errors
Compilation failed
6d1ed13
Thu 11 May 2023 04:41:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
74a964b
Thu 11 May 2023 04:44:14 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:22:36: error: expected ‘,’ or ‘;’ before ‘}’ token
   22 |   void *top = pq->heapArray[0].data};
      |                                    ^
Compilation failed
2e20608
Thu 11 May 2023 04:44:20 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
a7c2d16
Thu 11 May 2023 04:45:18 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|2
total_score: 20/70
0d6c5c9
Thu 11 May 2023 05:05:51 PM UTC: 
 heap.c | 32 +++++++++++++++++++++++++++++++-
 1 file changed, 31 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a59319c
Thu 11 May 2023 05:12:20 PM UTC: 
 heap.c | 29 +++++++++++------------------
 1 file changed, 11 insertions(+), 18 deletions(-)
 tests:  2|2
total_score: 20/70
cd240fd
Thu 11 May 2023 05:13:54 PM UTC: 
 heap.c | 14 +++++++++++---
 1 file changed, 11 insertions(+), 3 deletions(-)
 tests:  5|2
total_score: 35/70
43c8453
Thu 11 May 2023 05:14:21 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
c395742
Thu 11 May 2023 05:17:15 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
e1bbfea
Thu 11 May 2023 05:18:15 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
6385bee
Thu 11 May 2023 05:21:11 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
8554990
Thu 11 May 2023 05:23:01 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:36:72: error: expected ‘)’ before ‘;’ token
   36 |     pq->heapArray = realloc(pq->heapArray, sizeof(heapElem) * pq->capac;
      |                            ~                                           ^
      |                                                                        )
heap.c:36:73: error: expected ‘;’ before ‘}’ token
   36 |     pq->heapArray = realloc(pq->heapArray, sizeof(heapElem) * pq->capac;
      |                                                                         ^
      |                                                                         ;
   37 | 
   38 |   }
      |   ~                                                                      
Compilation failed
8e830ba
Thu 11 May 2023 05:23:12 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
b6ba954
Thu 11 May 2023 05:26:15 PM UTC: 
 heap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
08e6461
